Text Color Contrast Correction

--- a/style.css
+++ b/style.css
@@ -105,6 +105,7 @@ a:visited {
 .tooltip {
     position: relative;
     display: inline-block;
+    color: #C7C7C7;
     border-bottom: 1px dotted goldenrod;
 }
 
